Fix layout issue

--- a/web/themes/custom/parc/dev/pcss/theme/layout.pcss.css
+++ b/web/themes/custom/parc/dev/pcss/theme/layout.pcss.css
@@ -12,7 +12,6 @@
 
 .layout__region {
   box-sizing: border-box;
-  margin: 10px 0;
 }
 
 .layout__region--top {
